cmake_minimum_required(VERSION 3.4.0)
find_package (PythonInterp REQUIRED)
project(nsrlsvr)
set(VERSION "1.6.1")
set(PACKAGE_VERSION ${VERSION})
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.60.0 REQUIRED COMPONENTS program_options)
include(GNUInstallDirs)
set(PKGDATADIR ${CMAKE_INSTALL_FULL_DATADIR}/nsrlsvr)
add_subdirectory(src)
add_subdirectory(man1)

set(CPACK_GENERATOR "RPM")
set(CPACK_RPM_PACKAGE_SUMMARY "A server for forensics triage using NIST's NSRL RDS.")
set(CPACK_RPM_PACKAGE_NAME "nsrlsvr")
set(CPACK_PACKAGE_NAME "nsrlsvr")
set(CPACK_RPM_PACKAGE_VERSION ${PACKAGE_VERSION})
set(CPACK_PACKAGE_VERSION ${PACKAGE_VERSION})
set(CPACK_PACKAGE_RELEASE "1")
set(CPACK_RPM_PACKAGE_LICENSE "ISC")
set(CPACK_RPM_PACKAGE_REQUIRES "boost-program-options >= 1.60.0")
set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/description.txt")
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
set(CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION /usr/share/man /usr/share/man/man1)
include(CPack)
