cmake_minimum_required(VERSION 3.4.0)
project(nsrlsvr)
set(VERSION "1.7.0")
set(PACKAGE_VERSION ${VERSION})
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(PythonInterp REQUIRED)
find_package(Threads REQUIRED)
find_package(Boost 1.66.0 REQUIRED COMPONENTS program_options system)
include(GNUInstallDirs)
set(PKGDATADIR ${CMAKE_INSTALL_FULL_DATADIR}/nsrlsvr)
add_subdirectory(src)
add_subdirectory(man1)