[package]
name = "nsrlsvr"
version = "0.1.0"
edition = "2021"
authors = ["Robert J. Hansen <rob@hansen.engineering>"]
description = "nsrlsvr serves up MD5 hashes from the NIST NSRL RDS."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }